updated gallery grid template, updated grid gap to a fixed size, changed color

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
 
 html {
   font-size: 62.5%;
+  background-color: #f4f4f4;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
@@ -37,32 +38,57 @@ p {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2vw;
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  /*grid-template-columns: repeat(3, 1fr); */
+
+  gap: 3rem;
 }
 
 .grid-container div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   padding-bottom: 2vh;
   text-align: center;
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 0px 16px 24px -11px rgba(0, 0, 0, 0.1);
+
+  place-self: start;
+  transition: smooth;
 }
 
 .grid-container div img {
+  margin-bottom: 1vh;
   border-radius: 1rem;
-  padding-bottom: 1vh;
 }
 
 .grid-container div a {
   font-size: 1.6rem;
   color: white;
-  background-color: rgb(255, 0, 153);
-  padding: 1vw 2vw;
+  background-color: rgb(0, 182, 118);
   border-radius: 2rem;
+  padding: 1.2rem 3.2rem;
 }
 
 .grid-container p {
   padding-bottom: 2vh;
+}
+
+.wrapper {
+  margin: auto;
+  max-width: 1600px;
+}
+
+@media only screen and (max-width: 768px) {
+  .grid-container div a {
+    padding: 0.8rem 2.6rem;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 567px) {
+  .grid-container div a {
+    padding: 0.8rem 2.6rem;
+  }
 }
